Update documentation with experimental JVM options (#3)
-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap