@@ -32,7 +32,14 @@ To fix this, run the application like this:
 > docker run --memory 100M -e JAVA_OPTIONS='-Xmx100m' memory-sample
 ```
 
-The JAVA_OPTION variable is defined in our pom.xml, when the image is created. 
+
+As of Java 8u131 there is now an experimental VM option so the JVM is aware of the --memory switch used by Docker:
+
+```
+> docker run --memory 100M -e JAVA_OPTIONS='-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap' memory-sample
+```
+
+The JAVA_OPTION variable is defined in our pom.xml, when the image is created.
 
 You'll notice that when running with JAVA_OPTIONS switch, the total memory reported by the application will be 100M and you'll get an OutOfMemoryException, as expected, when the memory allocated goes over 100M.
 
